# MeetGuard-AI

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: test.yml
config/: default.yaml
meetguard/: config.py  main.py  profiles.py
meetguard/alerting/: dashboard_server.py  desktop_notify.py  meeting_recorder.py  sound_alert.py  webhooks.py
meetguard/api/: routes.py
meetguard/capture/: audio_capture.py  audio_wizard.py  frame_buffer.py  screen_capture.py  window_selector.py
meetguard/cli/: commands.py
meetguard/detectors/: deepfake_face.py  lip_sync.py  llm_fallback.py  suspicious_nlp.py  urgency_language.py  voice_mismatch.py
meetguard/fusion/: alert_rules.py  risk_aggregator.py  threat_classifier.py
meetguard/processing/: audio_splitter.py  face_extractor.py  transcriber.py  voiceprint_manager.py
meetguard/storage/: session_log.py  settings_store.py  voiceprint_db.py
meetguard/ui/: gradio_app.py
meetguard/utils/: __init__.py  logger.py  models.py
requirements/: base.txt  dev.txt  gpu.txt
scripts/: download_models.py  enroll_executive.py
tests/: conftest.py  test_cli_commands.py  test_config.py
tests/test_alerting/: test_webhooks.py
tests/test_capture/: test_frame_buffer.py
tests/test_detectors/: test_all_detectors.py  test_deepfake_face.py  test_suspicious_nlp.py  test_urgency_language.py  test_voiceprint_db.py
tests/test_fusion/: test_fusion.py
tests/test_integration/: test_pipeline.py
